--- a/Scarb.toml
+++ b/Scarb.toml
@@ -1,5 +1,5 @@
 [package]
-cairo-version = "2.5.4"
+cairo-version = "=2.6.3"
 name = "lethal"
 version = "0.6.0"
  
@@ -8,7 +8,7 @@ sierra-replace-ids = true
  
 [dependencies]
 cubit = { git = "https://github.com/influenceth/cubit.git" }
-dojo = { git = "https://github.com/dojoengine/dojo", tag = "v0.6.0" }
+dojo = { git = "https://github.com/dojoengine/dojo", tag = "v0.7.3" }
  
 [[target.dojo]]
 
